all database work done for week 2

--- a/week2_public_html/index2.html
+++ b/week2_public_html/index2.html
@@ -43,7 +43,7 @@
 
     <div class="form-wrapper">
       <h3>Modify cat</h3>
-      <form action="http://localhost:3000/cat" id="modCatForm" class="light-border">
+      <form action="http://localhost:3000/cat/" id="modCatForm" class="light-border">
         <input class="light-border" type="text" name="name" placeholder="Name" required>
         <input class="light-border" type="text" name="age" placeholder="Age" required>
         <input class="light-border" type="text" name="weight" placeholder="Weight" required>
