--- a/week2_public_html/index.html
+++ b/week2_public_html/index.html
@@ -19,6 +19,10 @@
     <button class="light-border" type="submit">Save</button>
   </form>
   <form action="http://localhost:3000/cat/imageUpload" method="post" class="light-border" enctype="multipart/form-data">
+    <input class="light-border" type="text" name="name" placeholder="Name" required>
+    <input class="light-border" type="text" name="age" placeholder="Age" required>
+    <input class="light-border" type="text" name="weight" placeholder="Weight" required>
+    <input class="light-border" type="text" name="owner" placeholder="Owner" required>
     <input class="light-border" type="file" name="catImage">
      <button class="light-border" type="submit" value="Upload Photo">Save</button>
   </form>
